--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -43,4 +43,10 @@
     <string name="reset_hidden_apps">Reset all</string>
 
     <string name="footer_info">If Always on is enabled, brightness gets recalculated to follow hardware specifications, so don\'t consider above values as absolute ones.\n\nLong press on the left text value to set it manually.</string>
+
+    <string name="edit_hint">Value</string>
+    <string name="seek_value_edit_label">Set value</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
+
 </resources>
