--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,6 +17,8 @@
 
     <string name="ambient_display_notifications">New notifications</string>
     <string name="ambient_display_summary">Wake screen when you receive notifications</string>
+    <string name="doze_elements_title">Ambient Battery</string>
+    <string name="misic_ticker">Ambient music Ticker</string>
 
     <!-- Tilt sensor -->
     <string name="tilt_sensor_title">Tilt sensor</string>
@@ -48,5 +50,13 @@
     <string name="seek_value_edit_label">Set value</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
+
+     <!-- Ambient display battery percentage -->
+    <string name="ambient_battery_percent_title">Battery level</string>
+    <string name="ambient_battery_percent_summary">Show battery percent on the bottom while dozing</string>
+
+     <!-- music ticker -->
+    <string name="pulse_on_new_tracks_title">Music ticker</string>
+    <string name="pulse_on_new_tracks_summary">Show Ambient Display when a new music track is played</string>
 
 </resources>
